#45 Provide templating also for the referenced file in the code attribute  - now referenced files are also used for templating (rendering).  - fixed bug related to FileExtensions (splitted extension does not have a dot).  - documentation updated.